fix overflowing images in chrome

--- a/src/Works/works.css
+++ b/src/Works/works.css
@@ -48,8 +48,8 @@
 }
 
 .works-photos img {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
   object-fit: contain;
 }
 
